# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "tvm-common"
version = "0.1.0"
authors = ["TVM Contributors"]
license = "Apache-2.0"
edition = "2018"

[features]
bindings = []

[dependencies]
failure = "=0.1.5"
ndarray = "0.12.1"
backtrace = "=0.3.30"
#env_logger = { version="0.6", default-features=false }
#env_logger = { version="0.6" }
regex = "=0.2.2"
memchr = "=1.0.2"
log = "=0.4.3"
#libc = "=0.2.45"
libc = { git = "https://github.com/AlexYaoRuihao/libc", branch = "fix_libc" }

[patch.crates-io]
libc = { git = "https://github.com/AlexYaoRuihao/libc", branch = "fix_libc" }



[build-dependencies]
bindgen = { git = "https://github.com/AlexYaoRuihao/rust-bindgen", branch = "downgrade-memchr" }
#regex = "^0.2.0"
#memchr = "=1.0.2"
log = "^0.4.0"